force-app/main/default/objects/car_rental__c/car_rental__c.object-meta.xml
<CustomObject>
    <label>car rental</label>
    <nameField>
        <label>car rental  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>car rentals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>