force-app/main/default/objects/car_rental__c/fields/district__c.field-meta.xml
<CustomField>
    <fullName>district__c</fullName>
    <label>district</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>state__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ratlam</fullName>
            </value>
            <value>
                <fullName>indore</fullName>
            </value>
            <value>
                <fullName>bhuj</fullName>
            </value>
            <value>
                <fullName>ahmdabad</fullName>
            </value>
            <value>
                <fullName>cantbera</fullName>
            </value>
            <value>
                <fullName>sydney</fullName>
            </value>
            <value>
                <fullName>oval</fullName>
            </value>
            <value>
                <fullName>lords</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>