force-app/main/default/objects/car_rental__c/fields/state__c.field-meta.xml
<CustomField>
    <fullName>state__c</fullName>
    <label>state</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>madhya pradesh</fullName>
            </value>
            <value>
                <fullName>gujrat</fullName>
            </value>
            <value>
                <fullName>maharashtra</fullName>
            </value>
            <value>
                <fullName>victoria</fullName>
            </value>
            <value>
                <fullName>melbourne</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>